# clckwrks-obsolete

./: Acid.hs  CMS.hs  CMSMonad.hs  CMSURL.hs  Clckwrks.hs  FormPart.hs  Home.hs  Main.hs  Makefile  Markdown.hs  Page.hs  PageMapper.hs  README.html  README.md  URL.hs  clckwrks.cabal
Admin/: Console.hs  EditPage.hs  NewPage.hs  Route.hs  Template.hs  URL.hs
Menu/: API.hs  Acid.hs  Edit.hs  Types.hs
Page/: API.hs  Acid.hs  Types.hs
ProfileData/: API.hs  Route.hs  URL.hs
clckwrks-cli/: Main.hs  clckwrks-cli.cabal
clckwrks-dot-com/: Backups.hs  Main.hs  PageMapper.hs  URL.hs  clckwrks-dot-com.cabal  run.sh
clckwrks-dot-com/debian/: changelog  control  rules
clckwrks-plugin-bugs/: clckwrks-plugin-bugs.cabal
clckwrks-plugin-bugs/Clckwrks/: Bugs.hs
clckwrks-plugin-bugs/Clckwrks/Bugs/: Acid.hs  Monad.hs  PreProcess.hs  Route.hs  Types.hs  URL.hs
clckwrks-plugin-bugs/Clckwrks/Bugs/Page/: EditBug.hs  EditMilestones.hs  SubmitBug.hs  Template.hs  Timeline.hs  ViewBug.hs
clckwrks-plugin-bugs/data/: style.css
clckwrks-plugin-ircbot/: LICENSE  clckwrks-plugin-ircbot.cabal  notes.txt
clckwrks-plugin-ircbot/Clckwrks/: IrcBot.hs
clckwrks-plugin-ircbot/Clckwrks/IrcBot/: Acid.hs  Monad.hs  PreProcess.hs  Route.hs  Types.hs  URL.hs
clckwrks-plugin-ircbot/Clckwrks/IrcBot/Page/: IrcLog.hs  IrcLogs.hs  Reconnect.hs  Settings.hs  Template.hs
clckwrks-plugin-ircbot/data/: style.css
clckwrks-plugin-media/: LICENSE  clckwrks-plugin-media.cabal
clckwrks-plugin-media/Clckwrks/: Media.hs
clckwrks-plugin-media/Clckwrks/Media/: Acid.hs  GetMedia.hs  Monad.hs  PreProcess.hs  Preview.hs  Route.hs  Types.hs  URL.hs  Upload.hs
clckwrks-plugin-media/Clckwrks/Media/Page/: AllMedia.hs  GetMedia.hs  GetMedium.hs  Preview.hs  Upload.hs
clckwrks-theme-basic/: Home.hs  LICENSE  Page.hs  clckwrks-theme-basic.cabal
clckwrks-theme-basic/Theme/: Blog.hs  Home.hs  Page.hs
clckwrks-theme-basic/data/: style.css
clckwrks-theme-clckwrks/: clckwrks-theme-clckwrks.cabal
clckwrks-theme-clckwrks/Theme/: Blog.hs  Home.hs  Page.hs  Template.hs
clckwrks-theme-clckwrks/data/: style.css
static/: style.css  theme.css
static/theme/clckwrks/: style.css
