Name:                clckwrks-cli
Version:             0.1
Synopsis:            a command-line interface for adminstrating some aspects of clckwrks
-- Description:         
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:           
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.2


Executable clckwrks-cli
  Main-is:             
     Main.hs
  
  Build-depends:       
     acid-state == 0.6.*,
     base       < 5,
     clckwrks,
     network    == 2.3.*
