Name:                clckwrks-dot-com
Version:             0.1.2
Synopsis:            clckwrks.com 
-- Description:         
Homepage:            http://clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:           
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.2

Flag plugins
     Description: enable dynamic recompilation
     Default: False

Executable clckwrks-server
  Main-is: Main.hs
  ghc-options: -threaded -O2
  Extensions: CPP
  Build-depends:
        base < 5,
        bytestring == 0.9.*,
        clckwrks   == 0.6.*,
        clckwrks-plugin-media,
        containers == 0.4.*,
        mtl        >= 2.0 && < 2.3,
        text,
        web-routes == 0.27.*,
        web-routes-happstack,
        web-routes-th == 0.21.*

  if flag(plugins)
    Build-depends:
      plugins-auto > 0.0.1
    cpp-options: -DPLUGINS
  else
    Build-depends:
      clckwrks-theme-basic
