Name:                clckwrks-dot-com
Version:             0.1.2
Synopsis:            clckwrks.com 
-- Description:         
Homepage:            http://clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:           
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.2

Flag plugins
     Description: enable dynamic recompilation
     Default: False

Executable clckwrks-dot-com-server
  Main-is: Main.hs
  ghc-options: -threaded -O2 -rtsopts
  Extensions: CPP
  Build-depends:
        base < 5,
        bytestring == 0.9.*,
        clckwrks   == 0.6.*,
        clckwrks-plugin-media,
        containers == 0.4.*,
        mtl        >= 2.0 && < 2.3,
        text,
        web-routes == 0.27.*,
        web-routes-happstack,
        web-routes-th == 0.21.*

  if flag(plugins)
    Build-depends:
      plugins-auto > 0.0.1
    cpp-options: -DPLUGINS
  else
    Build-depends:
      clckwrks-theme-clckwrks

Executable clckwrks-dot-com-backups
 Main-Is: Backups.hs
 GHC-Options: -threaded -Wall -Wwarn -O2 -fno-warn-name-shadowing -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-binds -fno-warn-orphans -fwarn-unused-imports -fno-spec-constr
 Build-depends: archive >= 1.2.9, base, Extra
