Name:                clckwrks-plugin-media
Version:             0.1
Synopsis:            media plugin for clckwrks
Homepage:            http://clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:
    Clckwrks.Media.Acid
    Clckwrks.Media.Monad
    Clckwrks.Media.Route
    Clckwrks.Media.Types
    Clckwrks.Media.Upload
    Clckwrks.Media.URL

  Build-depends:
    base < 4.5,
    acid-state == 0.6.*,
    clckwrks == 0.1.*,
    digestive-functors == 0.2.*,
    digestive-functors-hsp == 0.4.*,
    directory == 1.1.*,
    filepath == 1.2.*,
    happstack-server == 6.4.*,
    hsp == 0.6.*,
    ixset == 1.0.*,
    magic == 1.0.*,
    mtl == 2.0.*,
    safecopy == 0.6.*,
    text == 0.11.*,
    web-routes == 0.26.*,
    web-routes-th == 0.21.*

  -- Build-tools:
  --   trhsx
