Name:                clckwrks-plugin-media
Version:             0.1.1
Synopsis:            media plugin for clckwrks
Homepage:            http://clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.2
Data-Files:
    data/style.css

Library
  Build-tools:
    trhsx
  Exposed-modules:
    Clckwrks.Media
    Clckwrks.Media.Acid
    Clckwrks.Media.Monad
    Clckwrks.Media.Page.AllMedia
    Clckwrks.Media.Page.GetMedium
    Clckwrks.Media.Page.Preview
    Clckwrks.Media.Page.Upload
    Clckwrks.Media.PreProcess
    Clckwrks.Media.Preview
    Clckwrks.Media.Route
    Clckwrks.Media.Types
    Clckwrks.Media.URL
    Paths_clckwrks_plugin_media

  Build-depends:
    base < 5,
    acid-state == 0.6.*,
    attoparsec == 0.10.*,
    blaze-html == 0.4.*,
    clckwrks >= 0.1.* && < 0.3,
    containers == 0.4.*,
    digestive-functors == 0.2.*,
    digestive-functors-hsp == 0.4.*,
    directory == 1.1.*,
    filepath >= 1.2 && < 1.4,
    gd == 3000.*,
    happstack-server == 6.6.*,
    hsp == 0.6.*,
    ixset == 1.0.*,
    magic == 1.0.*,
    mtl == 2.0.*,
    safecopy == 0.6.*,
    text == 0.11.*,
    web-routes == 0.27.*,
    web-routes-th == 0.21.*

