Name:                clckwrks-theme-basic
Version:             0.1
Synopsis:            A basic theme for clckwrks
-- Description:
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.2
Data-Files:
        data/bluebox.png
        data/hscolour.css
        data/sidebar-background-01.png
        data/style.css

Library
  Build-tools:         trhsx
  Exposed-modules:     Theme.Blog,
                       Theme.Home,
                       Theme.Page
                       Paths_clckwrks_theme_basic

  Build-depends:
        base       < 5,
        clckwrks  == 0.5.*
