Name:                clckwrks-theme-clckwrks
Version:             0.1.11
Synopsis:            Theme for happstack.com
-- Description:
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.2
Data-Files:
        data/style.css
        data/hscolour.css
        data/clckwrks-logo.png
        data/7-icon.png
        data/8-icon.png
        data/philosophy-icon.png


Library
  Exposed-modules:     Theme.Blog,
                       Theme.Home,
                       Theme.Page,
                       Theme.Template
                       Paths_clckwrks_theme_clckwrks

  Build-depends:
        base          < 5,
        clckwrks      == 0.6.*,
        containers    == 0.4.*,
        happstack-hsp == 7.1.0,
        text
